feat:Update styles for translated blocks and revise translation config settings

--- a/templates/reader.html
+++ b/templates/reader.html
@@ -54,7 +54,7 @@
         .translated-block {
             margin: 0.75em 0 1.5em;
             color: #555;
-            font-style: italic;
+            font-style: nor;
             padding: 0.5em 0;
             border-left: 3px solid #dee2e6;
             padding-left: 1em;
@@ -66,7 +66,7 @@
             padding: 0.5em 1em;
             border-left: 3px solid #dee2e6;
             color: #999;
-            font-style: italic;
+            font-style: normal;
             display: flex;
             align-items: center;
             gap: 8px;
